--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Festive&family=Lora:ital@1&family=Roboto&display=swap");
+@import url(./var.css);
+@import url(./header.css);
+@import url(./main-page.css);
+@import url(./links.css);
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-image: url(../css/gallery/bg_001.jpg);
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vh;
+}
