--- a/css/links.css
+++ b/css/links.css
@@ -1,11 +1,11 @@
 header a,
-.links > a {
+.links a {
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: var(--font-color-nav);
 }
 
-.links > a {
+.links a {
   padding: 1rem;
   margin-top: 1rem;
   border-radius: 5px;
@@ -13,9 +13,9 @@ header a,
   text-align: center;
 }
 
-.links > a:first-of-type {
-  background-color: green;
+.links a:first-of-type {
+  background-color: rgb(62, 114, 62);
 }
-.links > a:last-of-type {
-  background-color: rgb(78, 48, 248);
+.links a:last-of-type {
+  background-color: rgb(51, 18, 241);
 }
