--- a/css/main-page.css
+++ b/css/main-page.css
@@ -25,8 +25,8 @@ main {
 }
 
 .text h1 {
-  font-size: 2rem;
-  letter-spacing: 0.6rem;
+  font-size: o.6rem;
+  letter-spacing: 0rem;
   padding-bottom: 50px;
 }
 
