--- a/css/header.css
+++ b/css/header.css
@@ -24,11 +24,13 @@ header nav,
 
 header nav ul {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   list-style: none;
   height: 100%;
-  color: aliceblue;
-  font-size: small;
-  scroll-padding-block: 20px;
+  color: --font-color-nav;
+  font-size: medium;
+  scroll-padding-block: 10px;
+  padding: 0px 20px;
+  width: 23vw;
 }
