--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Festive&family=Lora:ital@1&family=Roboto&display=swap");
 @import url(./var.css);
 @import url(./header.css);
 @import url(./main-page.css);
@@ -12,7 +11,7 @@
 
 body {
   background-image: url(../css/gallery/bg_001.jpg);
-  font-family: "Roboto", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
