--- a/css/main-page.css
+++ b/css/main-page.css
@@ -24,8 +24,8 @@ main {
   padding-right: 50px;
 }
 
-.text h1 {
-  font-size: o.6rem;
+.text h2 {
+  font-size: 2rem;
   letter-spacing: 0rem;
   padding-bottom: 50px;
 }
@@ -62,7 +62,7 @@ main {
 
 .photo1 {
   z-index: 1;
-  top: 5%;
+  top: 7%;
   left: 5%;
 }
 
