--- a/css/links.css
+++ b/css/links.css
@@ -11,10 +11,11 @@ header a,
   border-radius: 5px;
   width: 48%;
   text-align: center;
+  font-size: 22px;
 }
 
 .links a:first-of-type {
-  background-color: rgb(62, 114, 62);
+  background-color: rgb(130, 207, 130);
 }
 .links a:last-of-type {
   background-color: rgb(51, 18, 241);
