--- a/css/header.css
+++ b/css/header.css
@@ -33,5 +33,5 @@ header nav ul {
   scroll-padding-block: 10px;
   padding: 0px 20px;
   width: 23vw;
-  font-weight: bold;
+  font-weight: bolder;
 }
