--- a/css/main-page.css
+++ b/css/main-page.css
@@ -28,7 +28,7 @@ main {
   font-size: 2rem;
   letter-spacing: 0rem;
   padding-bottom: 50px;
-  font-weight: bold;
+  font-weight: bolder;
 }
 
 .text p {
